--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "akxyfegu",
+    "password": "q9mGSZ8oQRphDir9dzWqNgT6sIBM8y4R",
+    "database": "akxyfegu",
+    "host": "jelani.db.elephantsql.com",
+    "dialect": "postgres"
   }
 }
